Testing against JDK 9.